# cmp5-v1

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  cmp5-v1.code-workspace
backend/: .coverage  README.md  coverage.xml  pyproject.toml  requirements.txt
backend/config/: logging.yaml
backend/logs/: status_line.json
backend/src/: main.py
backend/src/api/: bl.py  channel_routing.py  containers.py  health.py  session_messages.py  sessions.py  track.py  voice.py
backend/src/chat/: __init__.py  chat_continuity.py  chat_errors.py  chat_interface.py  chat_response.py
backend/src/core/: config.py
backend/src/lib/: circuit_breaker.py  graceful_degradation.py  log_sanitizer.py  logger.py
backend/src/localisation/: __init__.py  accent_handler.py  context_detection.py  cultural_messages.py  en.py
backend/src/mcp/: cma_cgm_server.py  efl_terminal_server.py
backend/src/middleware/: auth.py  error_handler.py  localisation.py  logging.py  security.py
backend/src/models/: agent.py  agent_session.py  bill_of_lading.py  container.py  container_milestone.py  session_context.py  terminal_location.py  vessel_voyage.py
backend/src/schemas/: __init__.py  error.py  health.py  session.py  track.py
backend/src/services/: agent_service.py  channel_router.py  external_api_service.py  response_service.py  session_service.py  track_service.py  voice_service.py
backend/src/storage/: redis_session_store.py
backend/src/voice/: __init__.py  audio_utils.py  openai_realtime.py  session_continuity.py  twilio_handler.py  voice_response.py
backend/tests/: conftest.py
backend/tests/contract/: test_bl_get.py  test_containers_get.py  test_health.py  test_localised_errors.py  test_milestones_get.py  test_session_messages_get.py  (+2 more)
(+50 files in other folders)
